// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileExplorer tests renders a delete file icon and allows a file to be deleted 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="app-container"
  >
    <div>
      <div
        class="section-row undefined"
      >
        <span>
          <span>
            here is some text
          </span>
           
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        test1.org
      </div>
    </div>
  </div>
</div>
`;

exports[`fileExplorer tests renders all the file names stored in indededDB, clicking on a file changes it background and returns calls setText 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="app-container"
  >
    <div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  This is a headline note
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Headline notes have bulletpoints at the start of a line
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Add a new headline by clicking the blue plus button
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <svg
              height="20"
              width="20"
            >
              <line
                stroke="black"
                stroke-width="2"
                x1="5"
                x2="15"
                y1="10"
                y2="10"
              />
            </svg>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  Click on a headline to edit it
                </span>
                 
              </span>
            </div>
            <div />
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="horizontal-rule"
      />
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <svg
              height="20"
              width="20"
            >
              <line
                stroke="black"
                stroke-width="2"
                x1="5"
                x2="15"
                y1="10"
                y2="10"
              />
            </svg>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  To delete a note go to the edit screen and click the options icon in the upper right corner
                </span>
                 
              </span>
            </div>
            <div />
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="horizontal-rule"
      />
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  A headline's level determines its parent and children
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="3"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          This is a child of the headline above it
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="3"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Click on the dash on the right to collapse a headline's children
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <i
                      class="material-icons headline-star"
                    >
                      expand_more
                    </i>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Notes don't have to be headlines
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            They can also be content
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            - Content text is grey
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            - Context text cannot have children
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="horizontal-rule"
                      />
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          You can sync your changes with an existing Dropbox account by clicking the options icon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  Want to make a list of tasks?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <i
                      class="material-icons headline-star"
                    >
                      expand_more
                    </i>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span>
                        <span>
                          Mark a headline with TODO
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            Add some details about the task below in the content area
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="horizontal-rule"
                      />
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text green"
                      >
                         
                        DONE
                         
                      </span>
                      <span>
                        <span>
                          When you're done you can mark the task done
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        class="headline-priority-text"
                      >
                         #[
                        A
                        ] 
                      </span>
                      <span>
                        <span>
                          Have a lot of todo tasks? Give them a priority
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        class="headline-priority-text"
                      >
                         #[
                        B
                        ] 
                      </span>
                      <span>
                        <span>
                          This task is less important than the one above
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        class="headline-priority-text"
                      >
                         #[
                        C
                        ] 
                      </span>
                      <span>
                        <span>
                          Priority integrates with Agenda mode, a feature that will be coming soon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  Does Web-org support
                </span>
                 
              </span>
              <span>
                <span
                  class="text-bold"
                >
                  bold,
                </span>
                 
              </span>
              <span>
                <span
                  class="text-underline"
                >
                  underline,
                </span>
                 
              </span>
              <span>
                <span
                  class="text-italic"
                >
                  italic,
                </span>
                 
              </span>
              <span>
                <span>
                  and
                </span>
                 
              </span>
              <span>
                <span
                  class="text-strikethrough"
                >
                  strikethrough text?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    Yes, yes it does
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with * for bold
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with _ for underline
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with / for italic
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with + for strikethrough
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                      
                  </span>
                   
                </span>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        Welcome to Weborg.or...
      </div>
    </div>
  </div>
</div>
`;

exports[`fileExplorer tests renders an add file icon and allows a new file to be added 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="app-container"
  >
    <div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  This is a headline note
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Headline notes have bulletpoints at the start of a line
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Add a new headline by clicking the blue plus button
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <svg
              height="20"
              width="20"
            >
              <line
                stroke="black"
                stroke-width="2"
                x1="5"
                x2="15"
                y1="10"
                y2="10"
              />
            </svg>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  Click on a headline to edit it
                </span>
                 
              </span>
            </div>
            <div />
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="horizontal-rule"
      />
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <svg
              height="20"
              width="20"
            >
              <line
                stroke="black"
                stroke-width="2"
                x1="5"
                x2="15"
                y1="10"
                y2="10"
              />
            </svg>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  To delete a note go to the edit screen and click the options icon in the upper right corner
                </span>
                 
              </span>
            </div>
            <div />
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="horizontal-rule"
      />
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  A headline's level determines its parent and children
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="3"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          This is a child of the headline above it
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="3"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Click on the dash on the right to collapse a headline's children
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <i
                      class="material-icons headline-star"
                    >
                      expand_more
                    </i>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          Notes don't have to be headlines
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            They can also be content
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            - Content text is grey
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            - Context text cannot have children
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="horizontal-rule"
                      />
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span>
                        <span>
                          You can sync your changes with an existing Dropbox account by clicking the options icon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  Want to make a list of tasks?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <i
                      class="material-icons headline-star"
                    >
                      expand_more
                    </i>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span>
                        <span>
                          Mark a headline with TODO
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="section-row undefined"
                      >
                        <span>
                          <span>
                            Add some details about the task below in the content area
                          </span>
                           
                        </span>
                      </div>
                      <div
                        class="horizontal-rule"
                      />
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text green"
                      >
                         
                        DONE
                         
                      </span>
                      <span>
                        <span>
                          When you're done you can mark the task done
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        class="headline-priority-text"
                      >
                         #[
                        A
                        ] 
                      </span>
                      <span>
                        <span>
                          Have a lot of todo tasks? Give them a priority
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        class="headline-priority-text"
                      >
                         #[
                        B
                        ] 
                      </span>
                      <span>
                        <span>
                          This task is less important than the one above
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <svg
                      height="20"
                      width="20"
                    >
                      <line
                        stroke="black"
                        stroke-width="2"
                        x1="5"
                        x2="15"
                        y1="10"
                        y2="10"
                      />
                    </svg>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="headline-text"
                    >
                      <span
                        class="headline-state-text red"
                      >
                         
                        TODO
                         
                      </span>
                      <span
                        class="headline-priority-text"
                      >
                         #[
                        C
                        ] 
                      </span>
                      <span>
                        <span>
                          Priority integrates with Agenda mode, a feature that will be coming soon
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <div
                      class="no-user-select"
                    >
                      <i
                        class="material-icons headline-star"
                      >
                        more_vert
                      </i>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <i
              class="material-icons headline-star"
            >
              expand_more
            </i>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="headline-text"
            >
              <span>
                <span>
                  Does Web-org support
                </span>
                 
              </span>
              <span>
                <span
                  class="text-bold"
                >
                  bold,
                </span>
                 
              </span>
              <span>
                <span
                  class="text-underline"
                >
                  underline,
                </span>
                 
              </span>
              <span>
                <span
                  class="text-italic"
                >
                  italic,
                </span>
                 
              </span>
              <span>
                <span>
                  and
                </span>
                 
              </span>
              <span>
                <span
                  class="text-strikethrough"
                >
                  strikethrough text?
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    Yes, yes it does
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with * for bold
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with _ for underline
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with / for italic
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                    - wrap text with + for strikethrough
                  </span>
                   
                </span>
              </div>
              <div
                class="section-row undefined"
              >
                <span>
                  <span>
                      
                  </span>
                   
                </span>
              </div>
              <div
                class="horizontal-rule"
              />
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <div
              class="no-user-select"
            >
              <i
                class="material-icons headline-star"
              >
                more_vert
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        Welcome to Weborg.or...
      </div>
    </div>
  </div>
</div>
`;

exports[`fileExplorer tests renders an edit filename icon and allows a filename to be edited 1`] = `
<div>
  <div
    class="app-container"
  >
    <div>
      <div
        class="section-row undefined"
      >
        <span>
          <span>
            here is some text
          </span>
           
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        this-is-a-file.org
      </div>
    </div>
  </div>
</div>
`;

exports[`fileExplorer tests renders the current filename after selecting a new file 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="app-container"
  >
    <div>
      <div
        class="section-row undefined"
      >
        <span>
          <span>
            here is some text
          </span>
           
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        test2.org
      </div>
    </div>
  </div>
</div>
`;
